--- a/compiled/css/style_split_2.css
+++ b/compiled/css/style_split_2.css
@@ -1,3 +1,7 @@
+.matches-slider .content .match table tr.win td.team {
+  font-weight: 700;
+}
+
 .matches-slider .content .match:nth-child(even) {
   background-color: #ffffff;
 }
