--- a/src/css/less/bootstrap/rules/buttons.less
+++ b/src/css/less/bootstrap/rules/buttons.less
@@ -261,6 +261,10 @@
       border-left-color: darken(@btn-default-border, 12%);
     }
 
+    .btn:not(:last-child):last-of-type:not(.dropdown-toggle) {
+      border-right: 0;
+    }
+
     /*########## END*/
 
   }
